# numericxx

./: .gitignore  CMakeLists.txt  LICENSE
include/numericxx/: algorithm.hpp  config.hpp  exception.hpp  types.hpp  version.hpp
pkg/: numericxx.pc.in
src/: algorithm.cpp  algorithms.h  arithmetics.h  basic_arithmetics.h  bigint.cpp  bigint.h  cipher.h  config.cpp  congruence.h  exception.cpp  exceptions.h  gaussian_int.cpp  gaussian_int.h  int_types.h  primes.h  sieve.h  types.cpp  utilities.h  validator.h  version.cpp
src/configs/: config.h  config_int.h  config_versions.h
src/utils/: BigInt.hpp  stringmanip.h
test/: .gitignore  CMakeLists.txt
tests/: CMakeLists.txt  main.cpp
